# y11

./: .clang-format  .gitignore  README.md  meson.build
client/: app.c  app.h  compositor.c  compositor.h  main.c  meson.build  seat.c  seat.h
protocols/: meson.build
src/: callback.c  compositor.c  data-device-manager.c  data-device.c  data_device_manager.c  helpers.h  main.c  meson.build  output-client.c  output.c  pointer-client.c  pointer.c  region.c  seat.c  shell-client.c  shell-surface.c  shell.c  surface-state.c  surface.c  xdg-output.c  xdg-shell-desktop-client.c  xdg-shell-desktop.c  xdg-surface.c  xdg-toplevel.c  y11.h  zxdg-output-manager.c
